--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,8 @@
     padding: 5px;
   }
   
-  .flex-container {
-    display: flex;
-    flex-wrap: wrap;
+  .container {
+   
     max-width: 1300px;
     width: 100%;
     margin: 0 auto;
@@ -46,8 +45,7 @@
   }
   
   .row {
-    width: 100%;
-    flex-wrap: wrap;
+   
     margin-right: 0px !important;
     margin-left: 0px !important;
   }
@@ -102,9 +100,6 @@
       width: 100%;
   }
   
-  .header-container {
-    display: flex;
-  }
   
   .logo {
     padding-left: 50px;
@@ -112,7 +107,9 @@
   }
   
   .main-title {
-    width: 50%;
+    display: block;
+    margin: -72px 0px 0px 0px;
+    width: 100%;
     text-align: right;
     text-transform: uppercase;
     padding-right: 30px;
@@ -135,10 +132,12 @@
     margin: 0;
   }
   
-  .portfolio {
-    display: inline-flex;
+  .portfolio::after {
+    content: "";
+    clear: both;
+    display: table;
+    width:100%;
     justify-content: space-between;
-    flex-wrap: nowrap;
     text-align: center;
     padding-bottom: 40px;
   }
@@ -152,6 +151,10 @@
   
   .project {
     margin: 10px;
+    float: left;
+  width: 31.33%;
+  padding: 5px;
+  text-align: center;
   }
   
   .project-img {
@@ -170,10 +173,15 @@
   
   footer ul li {
     list-style: none;
-    display: inline-flex;
+    display: inline-block;
     margin: 30px;
   }
-  
+  @media screen and (max-width: 1028px) {
+    .project {
+    width: 30.33%;
+    }
+  }
+
   /*Media Queries*/
   @media screen and (max-width: 550px) {
     .logo {
@@ -208,10 +216,6 @@
   
     .col-6 {
       width: 100%;
-    }
-  
-    .portfolio {
-      flex-flow: wrap column;
     }
   
     .project {
